feat: added get function for all the devices associated to a given thesis
